overflow issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: 'Poppins', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     overflow-x: hidden;
@@ -377,6 +378,10 @@ p {
     padding: 10px;
     display: flex;
     flex-direction: column;
+}
+
+.price .title h2 {
+    color: #482A74;
 }
 
 .priceList .price .priceListHolder .card .imageHolder {
